# connections3

./: .local.env  Dockerfile  Pipfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: fork.yml
connections/: schemas.py
connections/models/: connection.py
tests/functional/connections/: test_create_connection.py  test_update_connection.py
tests/units/: test_person.py
