[tool.poetry]
name = "connections3"
version = "0.1.0"
description = "A demo app showing a simple service using flask and some supporting packages"
authors = ["Dash Hudson"]

[tool.poetry.dependencies]
python = "^3.6"
flask-cors = "==3.0.7"
flask-marshmallow = "==0.10.0"
flask-migrate = "==2.4.0"
flask-sqlalchemy = "==2.3.2"
gunicorn = "==19.9.0"
marshmallow = "==2.19.2"
marshmallow-enum = "==1.4.1"
marshmallow-sqlalchemy = "==0.16.0"
mysqlclient = "==1.4.2.post1"
SQLAlchemy = "==1.3.3"
webargs = "==5.3.0"
flask = "==1.0.2"

[tool.poetry.dev-dependencies]
flake8 = "==3.6.0"
flake8-import-order = "==0.18.1"
flake8-per-file-ignores = "==0.8.1"
flake8-quotes = "==1.0.0"
pep8-naming = "==0.8.2"
factory-boy = "==2.11.1"
Faker = "==1.0.5"
flake8_module_name = {git = "https://github.com/pmdarrow/flake8_module_name.git", rev = "support-numbers"}
pytest = "==4.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
